--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=api
+server.port=9000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersion
