--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api
 server.port=9000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersion
+spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersions
 spring.datasource.username=cervelle
 spring.datasource.password=V@l@don87$
 spring.jpa.hibernate.ddl-auto=update
