--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,10 +2,13 @@ spring.application.name=api
 server.port=9000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersions
+spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersion
 spring.datasource.username=cervelle
 spring.datasource.password=V@l@don87$
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+
+spring.flyway.baseline-on-migrate=true
 
