--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,6 +11,7 @@
     <groupId>fr.limoges.valadon.immersions</groupId>
     <artifactId>api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+
     <name>api</name>
     <description>api</description>
     <url/>
@@ -44,6 +45,7 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-mysql</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -83,11 +85,14 @@
 
     <build>
         <plugins>
+            <!-- Spring Boot Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
+
+
 
 </project>
