--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,15 +3,14 @@ server.port=9000
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersion
+spring.datasource.url=jdbc:mysql://sioslam.mysql.database.azure.com:3306/immersion2
 spring.datasource.username=cervelle
 spring.datasource.password=V@l@don87$
 spring.jpa.hibernate.ddl-auto=update
 
+
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 
-
-spring.flyway.baseline-on-migrate=true
 
 
